--- a/index.html
+++ b/index.html
@@ -1,58 +1,64 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"  crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"  crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"  crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"  crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="portfolio.min.css" />
     <script src="portfolio.min.js"></script>
 </head>
 
-
-
 <body>
+    <nav class="navbar fixed-top navbar-light bg-light">
+        <a class="navbar-brand" href="#">GOOEY NAV</a>
+    </nav>
 
-
-    
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
 
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <h4>JEROME PANGELINAN</h4>
+        <div class="row">
+            <div id="bio_box" class="col-4">
+                <div id="bio_text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, expedita consectetur. Laudantium ipsam
+                        voluptatibus vitae qui voluptates earum voluptate? Ab alias aliquid est iste incidunt voluptatum
+                        ipsa, quaerat itaque architecto.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, expedita consectetur. Laudantium ipsam
+                        voluptatibus vitae qui voluptates earum voluptate? Ab alias aliquid est iste incidunt voluptatum
+                        ipsa, quaerat itaque architecto.</p>
+                </div>
+                <div class="col-4">
+
+                </div>
+                <div class="col-4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, expedita consectetur. Laudantium ipsam
+                        voluptatibus vitae qui voluptates earum voluptate? Ab alias aliquid est iste incidunt voluptatum
+                        ipsa, quaerat itaque architecto.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, expedita consectetur. Laudantium ipsam
+                        voluptatibus vitae qui voluptates earum voluptate? Ab alias aliquid est iste incidunt voluptatum
+                        ipsa, quaerat itaque architecto.</p>
+
+                </div>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </div> <!-- ending container -->
+    </div>
+    <!-- ending container -->
 
 
 
 
 
 </body>
-
-
-
-
-
-
 
 
 </html>
