--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="portfolio.min.css" />
-    <script src="portfolio.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/portfolio.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="meyer.min.css" />
+    <script src="assets/javascript/portfolio.min.js"></script>
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="#">GOOEY NAV</a>
+    <nav id="top_line" class="navbar fixed-top navbar-light bg-light">
+        <a class="navbar-brand" href="#">Fixed top</a>
     </nav>
 
     <div class="container-fluid">
@@ -24,29 +25,32 @@
         <br>
         <br>
         <br>
-        <br>
-
-        <h4>JEROME PANGELINAN</h4>
         <div class="row">
-            <div id="bio_box" class="col-4">
+            <div id="intro" class="col-6">
+                <h4 id="name" class="text-center">JEROME PANGELINAN</h4>
+                <h6 id="position_title" class="text-center">Web Developer</h6>
+            </div>
+            <div id="bio_box" class="col-6">
+
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-4">
                 <div id="bio_text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, expedita consectetur. Laudantium ipsam
-                        voluptatibus vitae qui voluptates earum voluptate? Ab alias aliquid est iste incidunt voluptatum
-                        ipsa, quaerat itaque architecto.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, expedita consectetur. Laudantium ipsam
-                        voluptatibus vitae qui voluptates earum voluptate? Ab alias aliquid est iste incidunt voluptatum
-                        ipsa, quaerat itaque architecto.</p>
+
                 </div>
                 <div class="col-4">
 
                 </div>
                 <div class="col-4">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, expedita consectetur. Laudantium ipsam
-                        voluptatibus vitae qui voluptates earum voluptate? Ab alias aliquid est iste incidunt voluptatum
-                        ipsa, quaerat itaque architecto.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, expedita consectetur. Laudantium ipsam
-                        voluptatibus vitae qui voluptates earum voluptate? Ab alias aliquid est iste incidunt voluptatum
-                        ipsa, quaerat itaque architecto.</p>
+                    <div class="row">
+                        <nav id="gooey_footer" class="navbar fixed-bottom navbar-light bg-light">
+                            <a class="navbar-brand" href="#">Fixed bottom</a>
+                        </nav>
+                    </div>
+
 
                 </div>
             </div>
