--- a/index.html
+++ b/index.html
@@ -17,46 +17,81 @@
 
 <body>
     <nav id="top_line" class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="#">Fixed top</a>
+        <a class="navbar-brand" href="#"></a>
     </nav>
 
     <div class="container-fluid">
 
+
+        <div class="row">
+            <div id="intro" class="col-12">
+                <h4 id="name" class="text-center">JEROME PANGELINAN</h4>
+                <h6 id="position_title" class="text-center">Web Developer</h6>
+            </div>
+        </div>
         <br>
         <br>
         <br>
         <div class="row">
-            <div id="intro" class="col-6">
-                <h4 id="name" class="text-center">JEROME PANGELINAN</h4>
-                <h6 id="position_title" class="text-center">Web Developer</h6>
-            </div>
             <div id="bio_box" class="col-6">
 
             </div>
         </div>
         <br>
         <br>
+        <br>
         <div class="row">
+            <div class="col-8">
+                <h3 id="about_me"> Front end and back end coding experience. Extensive code written in Javascript, JQUERY for functionality
+                    specified to project.</h3>
+                <p>Fundamental coding skills in Markup language html. CSS for styling</p>
+                <p>Syntax with acute precision containg proper reference links identation</p>
+            </div>
             <div class="col-4">
-                <div id="bio_text">
-
-                </div>
-                <div class="col-4">
-
-                </div>
-                <div class="col-4">
-                    <div class="row">
-                        <nav id="gooey_footer" class="navbar fixed-bottom navbar-light bg-light">
-                            <a class="navbar-brand" href="#">Fixed bottom</a>
-                        </nav>
-                    </div>
-
-
-                </div>
+                <p></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia cupiditate assumenda id nostrum, molestiae
+                    dolorem veniam distinctio unde, blanditiis, amet officiis sit. Vero atque dolorem nihil eius fugiat dicta.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia cupiditate assumenda id nostrum, molestiae
+                    dolorem veniam distinctio unde, blanditiis, amet officiis sit. Vero atque dolorem nihil eius fugiat dicta.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia cupiditate assumenda id nostrum, molestiae
+                    dolorem veniam distinctio unde, blanditiis, amet officiis sit. Vero atque dolorem nihil eius fugiat dicta.</p>
+            </div>
+            <div class="col-10">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia cupiditate assumenda id nostrum, molestiae
+                    dolorem veniam distinctio unde, blanditiis, amet officiis sit. Vero atque dolorem nihil eius fugiat dicta.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia cupiditate assumenda id nostrum, molestiae
+                    dolorem veniam distinctio unde, blanditiis, amet officiis sit. Vero atque dolorem nihil eius fugiat dicta.</p>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-12">
+                <nav id="gooey_footer" class="navbar fixed-bottom navbar-light bg-light">
+                    <a class="navbar-brand" href="#">Fixed bottom</a>
+                </nav>
             </div>
         </div>
     </div>
-    <!-- ending container -->
+
+
+
+
+
+
 
 
 
