--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-    <nav id="top_line" class="navbar fixed-top navbar-light bg-light">
+    <!-- <nav id="top_line" class="navbar fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
-    </nav>
+    </nav> -->
 
     <div class="container-fluid">
 
@@ -40,33 +40,63 @@
         <br>
         <br>
         <br>
+        <hr>
         <div class="row">
             <div class="col-8">
-                <h3 id="about_me"> Front end and back end coding experience. Extensive code written in Javascript, JQUERY for functionality
+                <h3 id="about_me" class="text_modif"> Front end and back end coding experience. Extensive code written in Javascript, JQUERY for functionality
                     specified to project.</h3>
-                <p>Fundamental coding skills in Markup language html. CSS for styling</p>
-                <p>Syntax with acute precision containg proper reference links identation</p>
+                <p class="text_modif">Fundamental coding skills in Markup language html. CSS for styling</p>
+                <p class="text_modif">Syntax with acute precision containg proper reference links identation</p>
             </div>
             <div class="col-4">
-                <p></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia cupiditate assumenda id nostrum, molestiae
-                    dolorem veniam distinctio unde, blanditiis, amet officiis sit. Vero atque dolorem nihil eius fugiat dicta.</p>
+                <p class="text_modif">Programming Languages I have coded</p>
+                <ul class="text_modif">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>JQUERY</li>
+                    <li>NODEJS</li>
+                </ul>
+                <p class="text_modif">Frameworks I have coded with or am familiar with</p>
+                <ul class="text_modif">
+                    <li>JQUERY</li>
+                    <li>BOOTSTRAP</li>
+                    <li>Materialize</li>
+                    <li>NODEJS</li>
+                </ul>
             </div>
         </div>
         <div class="row">
             <div class="col-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia cupiditate assumenda id nostrum, molestiae
-                    dolorem veniam distinctio unde, blanditiis, amet officiis sit. Vero atque dolorem nihil eius fugiat dicta.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia cupiditate assumenda id nostrum, molestiae
-                    dolorem veniam distinctio unde, blanditiis, amet officiis sit. Vero atque dolorem nihil eius fugiat dicta.</p>
+                <p class="text_modif"> My goal is to write the most effective and efficient code I am able to write. I practice every day to bring
+                    my skill level up</p>
+                <p class="text_modif">With a very strong understanding of the concepts required for front end and back end execution. Aleways staying
+                    up to date with latest versions to be intergrated into code</p>
             </div>
             <div class="col-10">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia cupiditate assumenda id nostrum, molestiae
-                    dolorem veniam distinctio unde, blanditiis, amet officiis sit. Vero atque dolorem nihil eius fugiat dicta.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia cupiditate assumenda id nostrum, molestiae
-                    dolorem veniam distinctio unde, blanditiis, amet officiis sit. Vero atque dolorem nihil eius fugiat dicta.</p>
+                <p class="text_modif">Not sure what this section should say, if anything...</p>
+                <h2 class="text_modif">should I put something here?</h2>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12">
+
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
@@ -80,21 +110,15 @@
         <br>
         <div class="row">
             <div class="col-12">
+                <div>
+                    <img id="photo" src="assets/images/medotcom.jpg">
+                </div>
                 <nav id="gooey_footer" class="navbar fixed-bottom navbar-light bg-light">
-                    <a class="navbar-brand" href="#">Fixed bottom</a>
+                    <!-- <a id="footer_font" class="navbar-brand" href="#">GOOEY FOOTER</a> -->
                 </nav>
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
 
 
 </body>
