--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous"></script>
@@ -34,6 +35,12 @@
         <br>
         <div class="row">
             <div id="bio_box" class="col-6">
+                    <button id="about_me" type="button" class="btn btn-link">A</button>
+                    <button id="port"  type="button" class="btn btn-link">P</button>
+                    <button  id="contact" type="button" class="btn btn-link">C</button>
+
+
+
 
             </div>
         </div>
@@ -109,11 +116,12 @@
         <br>
         <br>
         <div class="row">
+               
             <div class="col-12">
-                <div>
-                    <img id="photo" src="assets/images/medotcom.jpg">
-                </div>
                 <nav id="gooey_footer" class="navbar fixed-bottom navbar-light bg-light">
+                        <div>
+                                <img id="photo" src="assets/images/medotcom.jpg">
+                            </div>
                     <!-- <a id="footer_font" class="navbar-brand" href="#">GOOEY FOOTER</a> -->
                 </nav>
             </div>
