--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
         <br>
         <br>
         <div class="row">
-            <div id="bio_box" class="col-6">
-                    <button id="about_me" type="button" class="btn btn-link">A</button>
-                    <button id="port"  type="button" class="btn btn-link">P</button>
-                    <button  id="contact" type="button" class="btn btn-link">C</button>
+            <div id="bio_circle" class="col-6">
+                    <!-- <button class="links">Marvel</button>
+                    <button class="links">Train Scheduler</button>
+                    <button class="links">Giphy</button> -->
+                </div>
+                <!-- <button id="about_me" type="button" class="btn btn-link">About</button>
+                <button id="port" type="button" class="btn btn-link">Portfolio</button>
+                <button id="contact" type="button" class="btn btn-link">Contact</button> -->
             </div>
         </div>
         <br>
@@ -87,27 +91,27 @@
             </div>
         </div>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+                 <br>
+                         <br>
+                                <br>
+                                         <br>
+                                                 <br>
+                                                         <br>
+                                                                <br>
+                                                                     <br>
+                                                                 <br>
+                                                         <br>
+                                                 <br>
+                                         <br>
+                                 <br>
+                        <br>
+                <br>
         <div class="row">
-               
+
             <div class="col-12">
                 <nav id="gooey_footer" class="navbar fixed-bottom navbar-light bg-light">
-                    
-                        <img id="photo" src="assets/images/medotcom.jpg">
+
+                    <img id="photo" src="assets/images/medotcom.jpg">
                 </nav>
             </div>
         </div>
