--- a/index.html
+++ b/index.html
@@ -13,16 +13,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/portfolio.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="meyer.min.css" />
-    <script src="assets/javascript/portfolio.min.js"></script>
+    <script src="assets/javascript/portfolio.js"></script>
 </head>
 
 <body>
-    <!-- <nav id="top_line" class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="#"></a>
-    </nav> -->
-
     <div class="container-fluid">
-
 
         <div class="row">
             <div id="intro" class="col-12">
@@ -30,19 +25,32 @@
                 <h6 id="position_title" class="text-center">Web Developer</h6>
             </div>
         </div>
-        <br>
-        <br>
-        <br>
         <div class="row">
             <div id="bio_circle" class="col-6">
-                    <!-- <button class="links">Marvel</button>
-                    <button class="links">Train Scheduler</button>
-                    <button class="links">Giphy</button> -->
+                <div id="text_intro">
+                    <p id="frontend">Front End client side code for build and functionality. </p>
+                    <p id="backend">Back End server side code to request data for website print or stricly within server database.</p>
+                    <button class="back">Back</button>
                 </div>
-                <!-- <button id="about_me" type="button" class="btn btn-link">About</button>
-                <button id="port" type="button" class="btn btn-link">Portfolio</button>
-                <button id="contact" type="button" class="btn btn-link">Contact</button> -->
-            </div>
+                <div id="email"class="form-group row">
+                    <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email</label>
+                    <div class="col-sm-10">
+                      <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="">
+                      <button class="back">Back</button>
+                    </div>
+                </div>
+                <div id="proj_button">
+                    <button class="links">Marvel</button>
+                    <button class="links">Train Scheduler</button>
+                    <button class="links">Giphy</button> 
+                    <button class="back">Back</button>
+                </div>
+                  <div id="main_button">
+                    <button id="about_me" type="button" class="btn btn-link">About</button>
+                    <button id="port" type="button" class="btn btn-link">Portfolio</button>
+                    <button id="contact" type="button" class="btn btn-link">Contact</button>
+                  </div> 
+             </div>
         </div>
         <br>
         <br>
