--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/portfolio.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="meyer.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="meyer.css" />
     <script src="assets/javascript/portfolio.js"></script>
 </head>
 
@@ -29,7 +29,8 @@
             <div id="bio_circle" class="col-6">
                 <div id="text_intro">
                     <p id="frontend">Front End client side code for build and functionality. </p>
-                    <p id="backend">Back End server side code to request data for website print or stricly within server database.</p>
+                    <p id="backend">Back End server side code to request data for website print</p>
+                    <p>or stricly within server database.</p>
                     <button class="back">Back</button>
                 </div>
                 <div id="email"class="form-group row">
@@ -64,7 +65,7 @@
                 <p class="text_modif">Syntax with acute precision containg proper reference links identation</p>
             </div>
             <div class="col-4">
-                <p class="text_modif">Programming Languages I have coded</p>
+                <h5 class="text_modif">Programming Languages I have coded</h5>
                 <ul class="text_modif">
                     <li>HTML</li>
                     <li>CSS</li>
@@ -72,7 +73,7 @@
                     <li>JQUERY</li>
                     <li>NODEJS</li>
                 </ul>
-                <p class="text_modif">Frameworks I have coded with or am familiar with</p>
+                <h5 class="text_modif">Frameworks I have coded with or am familiar with</h5>
                 <ul class="text_modif">
                     <li>JQUERY</li>
                     <li>BOOTSTRAP</li>
