--- a/index.html
+++ b/index.html
@@ -55,14 +55,12 @@
         </div>
         <br>
         <br>
-        <br>
         <hr>
         <div class="row">
             <div class="col-8">
-                <h6 id="about_me" class="text_modif">Intricate, effective and extensive client side & server side code. Fundamental languages implemented when specific frameworks are present in every project.version updates are always acknowlegded,researched and written into code with purposeMy goal is to write the most effective and efficient code I am able to write. I practice every day to bring my skill level up with a very strong understanding of the concepts required in front end and back end syntax. Aleways staying up to date with latest versions to be intergrated into code</h6>
-                <h6 class="text_modif">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa inventore praesentium ut. Praesentium aut, doloremque, voluptatibus ipsum, autem sit odio voluptate incidunt eos aspernatur placeat. Rerum ratione nesciunt ex dolores.</h6>
-                <h6 class="text_modif">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa inventore praesentium ut. Praesentium aut, doloremque, voluptatibus ipsum, autem sit odio voluptate incidunt eos aspernatur placeat. Rerum ratione nesciunt ex dolores.</h6>
-                <h6 class="text_modif">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa inventore praesentium ut. Praesentium aut, doloremque, voluptatibus ipsum, autem sit odio voluptate incidunt eos aspernatur placeat. Rerum ratione nesciunt ex dolores.</h6>
+                <h5 id="about_me" class="text_modif">Aesthetic: Intricate, effective and extensive client side & server side code. Fundamental languages implemented when specific frameworks are present in every project. Version updates are always acknowlegded,researched and utilized with purpose.</h5>
+                <h5 class="text_modif">
+                    Code Execution Goal: Write the most effective and efficient code I am most needed for code to run at the hgihest capability. Constant research and practice of better techniques and methods with a very strong understanding of the concepts required in Front End/Back End syntax. Tendency to stay up to date with latest versions to be intergrated.</h5>
                     
             <div id="skill_list" class="col-4">
                 <h5 class="text_modif">Programming Languages I have coded</h5>
