--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <hr>
         <div class="row">
             <div class="col-8">
-                <h5 id="about_me" class="text_modif">Aesthetic: Intricate, effective and extensive client side & server side code. Fundamental languages implemented when specific frameworks are present in every project. Version updates are always acknowlegded,researched and utilized with purpose.</h5>
+                <h5 id="about_me" class="text_modif">Aesthetic: Intricate, effective and extensive client side & server side code and database usage. Fundamental languages implemented when specific frameworks are present in every project. Version updates are always acknowledged,researched and utilized with purpose.</h5>
                 <h5 class="text_modif">
                     Code Execution Goal: Write the most effective and efficient code I am most needed for code to run at the hgihest capability. Constant research and practice of better techniques and methods with a very strong understanding of the concepts required in Front End/Back End syntax. Tendency to stay up to date with latest versions to be intergrated.</h5>
                     
@@ -67,9 +67,10 @@
                 <ul class="text_modif">
                     <li>HTML</li>
                     <li>CSS</li>
+                    <li>C#</li>
                     <li>JAVASCRIPT</li>
                     <li>JQUERY</li>
-                    <li>NODEJS</li>
+                    
                 </ul>
                 <h5 class="text_modif">Frameworks I have coded with or am familiar with</h5>
                 <ul class="text_modif">
