--- a/index.html
+++ b/index.html
@@ -31,20 +31,22 @@
                     <p id="frontend">Front End client side code for build and functionality. </p>
                     <p id="backend">Back End server side code to request data for website print</p>
                     <p>or stricly within server database.</p>
-                    <button class="back">Back</button>
+                    <button class="back" type="button" class="btn btn-link">Back</button>
+                    <!-- <button class="back">Back</button> -->
                 </div>
                 <div id="email"class="form-group row">
                     <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Email</label>
                     <div class="col-sm-10">
                       <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="">
-                      <button class="back">Back</button>
+                      <button class="back"  type="button" class="btn btn-link">Back</button>
+                      <!-- <button class="back">Back</button> -->
                     </div>
                 </div>
                 <div id="proj_button">
-                    <button class="links">Marvel</button>
-                    <button class="links">Train Scheduler</button>
-                    <button class="links">Giphy</button> 
-                    <button class="back">Back</button>
+                    <input id="marvel" class="btn btn-primary links" type="button" onclick="location.href = 'https://jponly.github.io/Project1';" value="Marvel">
+                    <input id="ts" class="btn btn-primary links" type="button" onclick="location.href = 'https://jponly.github.io/Train-Scheduler/';" value="Train Scheduler">
+                    <button class="back" type="button" class="btn btn-link">Back</button>
+                    <!-- <button class="back">Back</button>  -->
                 </div>
                   <div id="main_button">
                     <button id="about_me" type="button" class="btn btn-link">About</button>
@@ -60,7 +62,7 @@
             <div class="col-8">
                 <h5 id="about_me" class="text_modif">Aesthetic: Intricate, effective and extensive client side & server side code and database usage. Fundamental languages implemented when specific frameworks are present in every project. Version updates are always acknowledged,researched and utilized with purpose.</h5>
                 <h5 class="text_modif">
-                    Code Execution Goal: Write the most effective and efficient code I am most needed for code to run at the hgihest capability. Constant research and practice of better techniques and methods with a very strong understanding of the concepts required in Front End/Back End syntax. Tendency to stay up to date with latest versions to be intergrated.</h5>
+                    Code Execution Goal: Write the most effective and efficient code most needed to run at the highest capability. Constant research and practice of better techniques and methods with a very strong understanding of the concepts required in Front End/Back End syntax. Tendency to stay up to date with latest versions to be intergrated.</h5>
                     
             <div id="skill_list" class="col-4">
                 <h5 class="text_modif">Programming Languages I have coded</h5>
@@ -121,3 +123,9 @@
 
 
 </html>
+
+
+
+<!-- <button class="links">Marvel</button>
+<button class="links">Train Scheduler</button>
+<button class="links">Giphy</button>  -->
