--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
               <div  class="col-12">
               
                     <div class="port_card">
-                        <div id="marvel_proj" class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="assets/images/marvel_front" alt="Marvel Fanpage">
+                        <div id="marvel_proj" class="card" style="width: 9rem;">
+                                <img class="card-img-top" src="assets/images/marvel_front.png" alt="Marvel Fanpage">
                                 <div class="card-body" >
-                                  <p class="card-text">HTML Structure with CSS styling utilizing Bootstrap and Materialize</p>
-                                  <a type="button" class="btn btn-link" href="https://jponly.github.io/Project1/" target="_blank">Link</a>
+                                  <p class="card-text">HTML and CSS styling utilizing Bootstrap and Materialize</p>
+                                  <a id="marv_button" class="btn btn-link" href="https://jponly.github.io/Project1/" target="_blank">GO</a>
                                 </div>
                               </div>
-                              <div id="ts_proj" class="card" style="width: 18rem;">
-                                    <img class="card-img-top" src="assets/images/marvel_UI/100px180/?text=Image cap" alt="Train Schedule">
+                              <div id="ts_proj" class="card" style="width: 9rem;">
+                                    <img class="card-img-top" src="assets/images/ts.png" alt="Train Schedule">
                                     <div class="card-body">
                                       <p class="card-text">Utilizing moment.js within Javascript code to determine timing of train arrival</p>
-                                      <a type="button" class="btn btn-link"  href="https://jponly.github.io/Train-Scheduler/" target="_blank">Link</a>
+                                      <a id="ts_button" class="btn btn-link"  href="https://jponly.github.io/Train-Scheduler/" target="_blank">GO</a>
                                     </div>
                                   </div>
-                                  <div id="giphy_proj" class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Giphy">
+                                  <div id="giphy_proj" class="card" style="width: 9rem;">
+                                        <img class="card-img-top" src="assets/images/giphy.png" alt="Giphy">
                                         <div class="card-body">
                                           <p class="card-text">Request data from giphy API to dsiplay gif's of selected Simpsons characters</p>
-                                         <a type="button" class="btn btn-link" href="https://jponly.github.io/GifTastic/" target="_blank">Link</a>
+                                         <a id="gif_button" class="btn btn-link" href="https://jponly.github.io/GifTastic/" target="_blank">GO</a>
                                         </div>
                                    </div>
                         </div>
