--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/portfolio.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="meyer.css" />
     <script src="assets/javascript/portfolio.js"></script>
@@ -98,9 +98,10 @@
              </div> 
               <div class="col-4 contact-form">
                 <P class="text_modif"> Please click the link to get in contact via email</P>
-                  <form method="post" action="mailto:jpangeli514@gmail.com" >
-                      <input id="send_email" type="submit" value="Send Email" /> 
-                      </form>
+                <a href="mailto:jpangeli514@gmail.com" target="_blank" id="send_email"><i class="fa fa-google" style="font-size:58px;color:#DD4B39"></i></a>
+                  <!-- <form method="post" action="mailto:jpangeli514@gmail.com" >
+                      <input id="send_email" type="submit" value="Send Email"/> 
+                      </form> -->
              </div> 
              
             </div>
@@ -128,8 +129,8 @@
             <div class="col-12">
                  <nav id="gooey_footer" class="navbar fixed-bottom navbar-light bg-light"> 
                      <img id="photo" src="assets/images/medotcom.jpg">
-                     <a id="github" class="nav-link" href="https://github.com/jponly" target="_blank">github <span class="sr-only">(current)</span></a>
-                     <a id="linkedin" class="nav-link" href="https://www.linkedin.com/in/jerome-pangelinan-09162031/" target="_blank">linkedin <span class="sr-only">(current)</span></a>
+                      <a id="github" class="nav-link" href="https://github.com/jponly" target="_blank"><i class="fa fa-github" style="font-size:36px; color:#444444"></i><span class="sr-only">(current)</span></a>  
+                     <a id="linkedin" class="nav-link" href="https://www.linkedin.com/in/jerome-pangelinan-09162031/" target="_blank"><i class="fa fa-linkedin" style="font-size:36px; color:#007BB6"></i><span class="sr-only">(current)</span></a>
                  </nav> 
             </div>
         </div>
@@ -152,7 +153,7 @@
                             </div>
                             <button type="submit" class="btn btn-primary">Submit</button>
                     </form> -->
-
+                    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" crossorigin="anonymous"> -->
 
 
 <!-- --------- -->
