--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+        <!-- all icons and links functional. "go" link for project cards could be cleaner -->
         <nav id="top_choices" class="navbar navbar-expand-lg navbar-light bg-light">
                 <h6 id="name" class="text-center">JEROME PANGELINAN</h6>
                 <h6 id="position_title" class="text-center">Web Developer</h6> 
@@ -94,12 +95,10 @@
                                         </div>
                                    </div>
                         </div>
-              
-                
-             </div> 
+          </div> 
               <div class="col-4 contact-form">
                 <P class="text_modif"> Please click the link to get in contact via email</P>
-                <a href="mailto:jpangeli514@gmail.com" target="_blank" id="send_email"><i class="fa fa-google" style="font-size:58px;color:#DD4B39"></i></a>
+                <a href="mailto:jpangeli514@gmail.com" target="_blank" id="send_email"><i class="	fa fa-envelope-o" style="font-size:58px;color:#DD4B39"></i></a>
              </div> 
              </div>
              <div class="col-8">
